# rag_practice

./: README.md  eval.py  main.py  pyproject.toml  utils.py
docs/: something_about_me.md
