[project]
name = "rag-practice"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "chromadb>=1.4.1",
    "openai>=2.16.0",
    "pydantic>=2.12.5",
    "python-dotenv>=1.2.1",
    "pydantic-ai-slim[openai]>=0.0.16",
    "sentence-transformers>=5.2.2",
    "langchain>=1.2.8",
    "langchain-text-splitters>=1.1.0",
    "langchain-huggingface",
    "logfire>=4.21.0",
    "pydantic-evals>=1.52.0",
]
